--- a/index.html
+++ b/index.html
@@ -4,29 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link Css  -->
     <link rel="stylesheet" href="./styles.css">
+    <!-- Fontes selecionadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Desafio 1</title>
 </head>
 <body>
+    <!-- Box principal  -->
     <div>
+        <!-- Menu navegação -->
         <header>
             <a>Products</a>
             <a>Company</a>
             <a>Blog</a>
             <a>Log in</a>
+            <!-- Botão principal -->
             <button class="button-header">Sign up</button>
         </header>
+        <!-- Titulo e textos -->
         <section>
             <h1>Wide coverage location</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus odio earum amet enim, alias aliquid
                 saepe eligendi, voluptatem voluptates vel magnam? Architecto saepe quisquam alias earum quos unde aliquid
                 facilis!
             </p>
+            <!-- Botão secundario -->
             <button class="button-section">Learn more</button>
         </section>
+        <!-- Imagem do projeto -->
         <img src="./img/wide.png" alt="logo-image">
     </div>
 </body>
